--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npx prisma generate && next build",
     "start": "next start",
     "lint:eslint": "next lint",
     "lint:stylelint": "stylelint \"src/**/*.{css,scss}\" --ignore-path .gitignore",
     "lint": "npm run lint:eslint && npm run lint:stylelint"
   },
   "dependencies": {
+    "@prisma/client": "^4.0.0",
     "axios": "^0.24.0",
     "next": "12.0.10",
     "react": "17.0.2",
@@ -32,6 +33,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.5",
+    "prisma": "^4.0.0",
     "stylelint": "^14.2.0",
     "stylelint-config-standard-scss": "^3.0.0",
     "tailwindcss": "^3.0.13",
